--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 This project is licensed under the MIT License.
 See the LICENSE file in the project root for details.
 
-Copyright (c) 2024-2025 FlorianMichael/EnZaXD <florian.michael07@gmail.com>
+Copyright (c) 2024-2026 FlorianMichael/EnZaXD <git@florianmichael.de>
 -->
 
 <!DOCTYPE html>
