Update my name; Fix Discord URL
Signed-off-by: Florian Reuth <git@florianreuth.de>

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 This project is licensed under the MIT License.
 See the LICENSE file in the project root for details.
 
-Copyright (c) 2024-2026 FlorianMichael/EnZaXD <git@florianmichael.de>
+Copyright (c) 2024-2026 Florian Reuth <git@florianreuth.de>
 -->
 
 <!DOCTYPE html>
